refactor(api): redesign core change api